[package]
name = "cdbdirect"
version = "0.1.0"
description = "Query chessdb.cn database dump"
edition = "2021"

[dependencies]
shakmaty = { version = "0.27.1", git = "https://github.com/niklasf/shakmaty.git" }
terarkdb = { version = "0.1.0", path = "../terarkdb" }

[dev-dependencies]
csv = "1.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_with = "3.9.0"
