[package]
name = "lila-cloudeval"
version = "0.1.0"
description = "Query chessdb.cn database dump"
edition = "2021"

[dependencies]
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["derive"] }
crossbeam-channel = "0.5.13"
partial_sort = "0.2.0"
rayon = "1.10.0"
shakmaty = { version = "0.27.1", git = "https://github.com/niklasf/shakmaty.git" }
terarkdb = { version = "0.1.0", path = "../terarkdb" }

[dev-dependencies]
csv = "1.3.0"
hex = "0.4.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_with = "3.9.0"
