[package]
name = "lila-cloudeval-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1.3.2"
libfuzzer-sys = "0.4"

[dependencies.lila-cloudeval]
path = ".."

[[bin]]
name = "fuzz_target_binary_fen"
path = "fuzz_targets/fuzz_target_binary_fen.rs"
test = false
doc = false
bench = false
